# Cmake_and_GoogleMock

./: CMakeLists.txt  run_multithread_test.cpp  run_test.cpp
include/: functionA.h
src/: CMakeLists.txt  functionA.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
